// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Added Integration Table View Test Renders added integration table view using dummy data 1`] = `
<body>
  <div>
    <div
      class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow euiPageContent"
      data-test-subj="addedIntegrationsArea"
      role="main"
    >
      <div>
        <div
          class="euiFlexGroup euiFlexGroup--gutterMedium euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive euiFlexGroup--wrap"
        >
          <div
            class="euiFlexItem euiSearchBar__searchHolder"
          >
            <div
              class="euiFormControlLayout euiFormControlLayout--fullWidth euiFormControlLayout--compressed"
            >
              <div
                class="euiFormControlLayout__childrenWrapper"
              >
                <input
                  aria-label="This is a search bar. As you type, the results lower in the page will automatically filter."
                  class="euiFieldSearch euiFieldSearch--fullWidth euiFieldSearch--compressed"
                  placeholder="Search..."
                  type="search"
                  value=""
                />
                <div
                  class="euiFormControlLayoutIcons"
                >
                  <span
                    class="euiFormControlLayoutCustomIcon"
                  >
                    <svg
                      aria-hidden="true"
                      class="euiIcon euiIcon--small euiIcon-isLoading euiFormControlLayoutCustomIcon__icon"
                      focusable="false"
                      height="16"
                      role="img"
                      viewBox="0 0 16 16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M5.277 10.088c.02.014.04.03.057.047.582.55 1.134.812 1.666.812.586 0 1.84-.293 3.713-.88L9 6.212V2H7v4.212l-1.723 3.876Zm-.438.987L3.539 14h8.922l-1.32-2.969C9.096 11.677 7.733 12 7 12c-.74 0-1.463-.315-2.161-.925ZM6 2H5V1h6v1h-1v4l3.375 7.594A1 1 0 0 1 12.461 15H3.54a1 1 0 0 1-.914-1.406L6 6V2Z"
                      />
                    </svg>
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            class="euiFlexItem euiFlexItem--flexGrowZero euiSearchBar__filtersHolder"
          >
            <div
              class="euiFilterGroup"
            >
              <div
                class="euiPopover euiPopover--anchorDownCenter"
                id="field_value_selection_0"
              >
                <div
                  class="euiPopover__anchor"
                >
                  <button
                    class="euiButtonEmpty euiButtonEmpty--text euiButtonEmpty--small euiFilterButton euiFilterButton--hasIcon"
                    type="button"
                  >
                    <span
                      class="euiButtonContent euiButtonContent--iconRight euiButtonEmpty__content"
                    >
                      <svg
                        aria-hidden="true"
                        class="euiIcon euiIcon--medium euiIcon--inherit euiIcon-isLoading euiButtonContent__icon"
                        focusable="false"
                        height="16"
                        role="img"
                        viewBox="0 0 16 16"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M5.277 10.088c.02.014.04.03.057.047.582.55 1.134.812 1.666.812.586 0 1.84-.293 3.713-.88L9 6.212V2H7v4.212l-1.723 3.876Zm-.438.987L3.539 14h8.922l-1.32-2.969C9.096 11.677 7.733 12 7 12c-.74 0-1.463-.315-2.161-.925ZM6 2H5V1h6v1h-1v4l3.375 7.594A1 1 0 0 1 12.461 15H3.54a1 1 0 0 1-.914-1.406L6 6V2Z"
                        />
                      </svg>
                      <span
                        class="euiButtonEmpty__text"
                      >
                        <span
                          class="euiFilterButton__textShift"
                          data-text="Type"
                          title="Type"
                        >
                          Type
                        </span>
                      </span>
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="euiSpacer euiSpacer--l"
        />
        <div
          class="euiBasicTable"
        >
          <div>
            <div
              class="euiTableHeaderMobile"
            >
              <div
                class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsBaseline euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow"
              >
                <div
                  class="euiFlexItem euiFlexItem--flexGrowZero"
                >
                  <div
                    class="euiCheckbox"
                  >
                    <input
                      aria-label="Select all rows"
                      class="euiCheckbox__input"
                      id="_selection_column-checkbox_random_html_id"
                      type="checkbox"
                    />
                    <div
                      class="euiCheckbox__square"
                    />
                    <label
                      class="euiCheckbox__label"
                      for="_selection_column-checkbox_random_html_id"
                    >
                      Select all rows
                    </label>
                  </div>
                </div>
                <div
                  class="euiFlexItem euiFlexItem--flexGrowZero"
                />
              </div>
            </div>
            <table
              class="euiTable euiTable--responsive euiTable--auto"
              id="random_html_id"
              tabindex="-1"
            >
              <caption
                class="euiScreenReaderOnly euiTableCaption"
              />
              <thead>
                <tr>
                  <th
                    class="euiTableHeaderCellCheckbox"
                    scope="col"
                  >
                    <div
                      class="euiTableCellContent"
                    >
                      <div
                        class="euiCheckbox euiCheckbox--inList euiCheckbox--noLabel"
                      >
                        <input
                          aria-label="Select all rows"
                          class="euiCheckbox__input"
                          data-test-subj="checkboxSelectAll"
                          id="_selection_column-checkbox_random_html_id"
                          type="checkbox"
                        />
                        <div
                          class="euiCheckbox__square"
                        />
                      </div>
                    </div>
                  </th>
                  <th
                    class="euiTableHeaderCell"
                    data-test-subj="tableHeaderCell_name_0"
                    role="columnheader"
                    scope="col"
                  >
                    <span
                      class="euiTableCellContent"
                    >
                      <span
                        class="euiTableCellContent__text"
                        title="Integration Name"
                      >
                        Integration Name
                      </span>
                    </span>
                  </th>
                  <th
                    class="euiTableHeaderCell"
                    data-test-subj="tableHeaderCell_source_1"
                    role="columnheader"
                    scope="col"
                  >
                    <span
                      class="euiTableCellContent"
                    >
                      <span
                        class="euiTableCellContent__text"
                        title="Source"
                      >
                        Source
                      </span>
                    </span>
                  </th>
                  <th
                    class="euiTableHeaderCell"
                    data-test-subj="tableHeaderCell_dateAdded_2"
                    role="columnheader"
                    scope="col"
                  >
                    <span
                      class="euiTableCellContent"
                    >
                      <span
                        class="euiTableCellContent__text"
                        title="Date Added"
                      >
                        Date Added
                      </span>
                    </span>
                  </th>
                </tr>
              </thead>
              <tbody>
                <tr
                  class="euiTableRow euiTableRow-isSelectable"
                >
                  <td
                    class="euiTableRowCellCheckbox"
                  >
                    <div
                      class="euiTableCellContent"
                    >
                      <div
                        class="euiCheckbox euiCheckbox--inList euiCheckbox--noLabel"
                      >
                        <input
                          aria-label="Select this row"
                          class="euiCheckbox__input"
                          data-test-subj="checkboxSelectRow-ad7e6e30-0b99-11ee-b27c-c9863222e9bf"
                          id="_selection_column_ad7e6e30-0b99-11ee-b27c-c9863222e9bf-checkbox"
                          title="Select this row"
                          type="checkbox"
                        />
                        <div
                          class="euiCheckbox__square"
                        />
                      </div>
                    </div>
                  </td>
                  <td
                    class="euiTableRowCell"
                  >
                    <div
                      class="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
                    >
                      Integration Name
                    </div>
                    <div
                      class="euiTableCellContent euiTableCellContent--truncateText euiTableCellContent--overflowingContent"
                    >
                      <a
                        class="euiLink euiLink--primary"
                        data-test-subj="nginxIntegrationLink"
                        href="#/installed/ad7e6e30-0b99-11ee-b27c-c9863222e9bf"
                        rel="noreferrer"
                      >
                        nginx
                      </a>
                    </div>
                  </td>
                  <td
                    class="euiTableRowCell"
                  >
                    <div
                      class="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
                    >
                      Source
                    </div>
                    <div
                      class="euiTableCellContent euiTableCellContent--truncateText euiTableCellContent--overflowingContent"
                    >
                      <a
                        class="euiLink euiLink--primary"
                        data-test-subj="nginxIntegrationDescription"
                        href="#/available/nginx"
                        rel="noreferrer"
                      >
                        nginx
                      </a>
                    </div>
                  </td>
                  <td
                    class="euiTableRowCell"
                  >
                    <div
                      class="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
                    >
                      Date Added
                    </div>
                    <div
                      class="euiTableCellContent euiTableCellContent--truncateText euiTableCellContent--overflowingContent"
                    >
                      <div
                        class="euiText euiText--medium"
                        data-test-subj="nginxIntegrationDescription"
                      >
                        2023-06-15T16:28:36.370Z
                      </div>
                    </div>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
          <div>
            <div
              class="euiSpacer euiSpacer--m"
            />
            <div
              class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow"
            >
              <div
                class="euiFlexItem euiFlexItem--flexGrowZero"
              >
                <div
                  class="euiPopover euiPopover--anchorUpRight"
                >
                  <div
                    class="euiPopover__anchor"
                  >
                    <button
                      class="euiButtonEmpty euiButtonEmpty--text euiButtonEmpty--xSmall"
                      data-test-subj="tablePaginationPopoverButton"
                      type="button"
                    >
                      <span
                        class="euiButtonContent euiButtonContent--iconRight euiButtonEmpty__content"
                      >
                        <svg
                          aria-hidden="true"
                          class="euiIcon euiIcon--small euiIcon--inherit euiIcon-isLoading euiButtonContent__icon"
                          focusable="false"
                          height="16"
                          role="img"
                          viewBox="0 0 16 16"
                          width="16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M5.277 10.088c.02.014.04.03.057.047.582.55 1.134.812 1.666.812.586 0 1.84-.293 3.713-.88L9 6.212V2H7v4.212l-1.723 3.876Zm-.438.987L3.539 14h8.922l-1.32-2.969C9.096 11.677 7.733 12 7 12c-.74 0-1.463-.315-2.161-.925ZM6 2H5V1h6v1h-1v4l3.375 7.594A1 1 0 0 1 12.461 15H3.54a1 1 0 0 1-.914-1.406L6 6V2Z"
                          />
                        </svg>
                        <span
                          class="euiButtonEmpty__text"
                        >
                          Rows per page
                          : 
                          10
                        </span>
                      </span>
                    </button>
                  </div>
                </div>
              </div>
              <div
                class="euiFlexItem euiFlexItem--flexGrowZero"
              >
                <nav
                  class="euiPagination"
                >
                  <button
                    aria-label="Previous page"
                    class="euiButtonIcon euiButtonIcon--text euiButtonIcon--empty euiButtonIcon--xSmall"
                    data-test-subj="pagination-button-previous"
                    disabled=""
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="euiIcon euiIcon--medium euiIcon--inherit euiIcon-isLoading euiButtonIcon__icon"
                      focusable="false"
                      height="16"
                      role="img"
                      viewBox="0 0 16 16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M5.277 10.088c.02.014.04.03.057.047.582.55 1.134.812 1.666.812.586 0 1.84-.293 3.713-.88L9 6.212V2H7v4.212l-1.723 3.876Zm-.438.987L3.539 14h8.922l-1.32-2.969C9.096 11.677 7.733 12 7 12c-.74 0-1.463-.315-2.161-.925ZM6 2H5V1h6v1h-1v4l3.375 7.594A1 1 0 0 1 12.461 15H3.54a1 1 0 0 1-.914-1.406L6 6V2Z"
                      />
                    </svg>
                  </button>
                  <ul
                    class="euiPagination__list"
                  >
                    <li
                      class="euiPagination__item"
                    >
                      <button
                        aria-controls="random_html_id"
                        aria-current="true"
                        aria-label="Page 1 of 1"
                        class="euiButtonEmpty euiButtonEmpty--text euiButtonEmpty--small euiButtonEmpty-isDisabled euiPaginationButton euiPaginationButton-isActive euiPaginationButton--hideOnMobile"
                        data-test-subj="pagination-button-0"
                        disabled=""
                        type="button"
                      >
                        <span
                          class="euiButtonContent euiButtonEmpty__content"
                        >
                          <span
                            class="euiButtonEmpty__text"
                          >
                            1
                          </span>
                        </span>
                      </button>
                    </li>
                  </ul>
                  <button
                    aria-label="Next page"
                    class="euiButtonIcon euiButtonIcon--text euiButtonIcon--empty euiButtonIcon--xSmall"
                    data-test-subj="pagination-button-next"
                    disabled=""
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="euiIcon euiIcon--medium euiIcon--inherit euiIcon-isLoading euiButtonIcon__icon"
                      focusable="false"
                      height="16"
                      role="img"
                      viewBox="0 0 16 16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M5.277 10.088c.02.014.04.03.057.047.582.55 1.134.812 1.666.812.586 0 1.84-.293 3.713-.88L9 6.212V2H7v4.212l-1.723 3.876Zm-.438.987L3.539 14h8.922l-1.32-2.969C9.096 11.677 7.733 12 7 12c-.74 0-1.463-.315-2.161-.925ZM6 2H5V1h6v1h-1v4l3.375 7.594A1 1 0 0 1 12.461 15H3.54a1 1 0 0 1-.914-1.406L6 6V2Z"
                      />
                    </svg>
                  </button>
                </nav>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Added Integration Table View Test Renders added integration table view using dummy data when MDS is disabled 1`] = `
<body>
  <div>
    <div
      class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow euiPageContent"
      data-test-subj="addedIntegrationsArea"
      role="main"
    >
      <div>
        <div
          class="euiFlexGroup euiFlexGroup--gutterMedium euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive euiFlexGroup--wrap"
        >
          <div
            class="euiFlexItem euiSearchBar__searchHolder"
          >
            <div
              class="euiFormControlLayout euiFormControlLayout--fullWidth euiFormControlLayout--compressed"
            >
              <div
                class="euiFormControlLayout__childrenWrapper"
              >
                <input
                  aria-label="This is a search bar. As you type, the results lower in the page will automatically filter."
                  class="euiFieldSearch euiFieldSearch--fullWidth euiFieldSearch--compressed"
                  placeholder="Search..."
                  type="search"
                  value=""
                />
                <div
                  class="euiFormControlLayoutIcons"
                >
                  <span
                    class="euiFormControlLayoutCustomIcon"
                  >
                    <svg
                      aria-hidden="true"
                      class="euiIcon euiIcon--small euiFormControlLayoutCustomIcon__icon"
                      focusable="false"
                      height="16"
                      role="img"
                      viewBox="0 0 16 16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="m11.271 11.978 3.872 3.873a.502.502 0 0 0 .708 0 .502.502 0 0 0 0-.708l-3.565-3.564c2.38-2.747 2.267-6.923-.342-9.532-2.73-2.73-7.17-2.73-9.898 0-2.728 2.729-2.728 7.17 0 9.9a6.955 6.955 0 0 0 4.949 2.05.5.5 0 0 0 0-1 5.96 5.96 0 0 1-4.242-1.757 6.01 6.01 0 0 1 0-8.486c2.337-2.34 6.143-2.34 8.484 0a6.01 6.01 0 0 1 0 8.486.5.5 0 0 0 .034.738Z"
                      />
                    </svg>
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            class="euiFlexItem euiFlexItem--flexGrowZero euiSearchBar__filtersHolder"
          >
            <div
              class="euiFilterGroup"
            >
              <div
                class="euiPopover euiPopover--anchorDownCenter"
                id="field_value_selection_0"
              >
                <div
                  class="euiPopover__anchor"
                >
                  <button
                    class="euiButtonEmpty euiButtonEmpty--text euiButtonEmpty--small euiFilterButton euiFilterButton--hasIcon"
                    type="button"
                  >
                    <span
                      class="euiButtonContent euiButtonContent--iconRight euiButtonEmpty__content"
                    >
                      <svg
                        aria-hidden="true"
                        class="euiIcon euiIcon--medium euiIcon--inherit euiButtonContent__icon"
                        focusable="false"
                        height="16"
                        role="img"
                        viewBox="0 0 16 16"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M13.069 5.157 8.384 9.768a.546.546 0 0 1-.768 0L2.93 5.158a.552.552 0 0 0-.771 0 .53.53 0 0 0 0 .759l4.684 4.61c.641.631 1.672.63 2.312 0l4.684-4.61a.53.53 0 0 0 0-.76.552.552 0 0 0-.771 0Z"
                          fill-rule="non-zero"
                        />
                      </svg>
                      <span
                        class="euiButtonEmpty__text"
                      >
                        <span
                          class="euiFilterButton__textShift"
                          data-text="Type"
                          title="Type"
                        >
                          Type
                        </span>
                      </span>
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="euiSpacer euiSpacer--l"
        />
        <div
          class="euiBasicTable"
        >
          <div>
            <div
              class="euiTableHeaderMobile"
            >
              <div
                class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsBaseline euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow"
              >
                <div
                  class="euiFlexItem euiFlexItem--flexGrowZero"
                >
                  <div
                    class="euiCheckbox"
                  >
                    <input
                      aria-label="Select all rows"
                      class="euiCheckbox__input"
                      id="_selection_column-checkbox_random_html_id"
                      type="checkbox"
                    />
                    <div
                      class="euiCheckbox__square"
                    />
                    <label
                      class="euiCheckbox__label"
                      for="_selection_column-checkbox_random_html_id"
                    >
                      Select all rows
                    </label>
                  </div>
                </div>
                <div
                  class="euiFlexItem euiFlexItem--flexGrowZero"
                />
              </div>
            </div>
            <table
              class="euiTable euiTable--responsive euiTable--auto"
              id="random_html_id"
              tabindex="-1"
            >
              <caption
                class="euiScreenReaderOnly euiTableCaption"
              />
              <thead>
                <tr>
                  <th
                    class="euiTableHeaderCellCheckbox"
                    scope="col"
                  >
                    <div
                      class="euiTableCellContent"
                    >
                      <div
                        class="euiCheckbox euiCheckbox--inList euiCheckbox--noLabel"
                      >
                        <input
                          aria-label="Select all rows"
                          class="euiCheckbox__input"
                          data-test-subj="checkboxSelectAll"
                          id="_selection_column-checkbox_random_html_id"
                          type="checkbox"
                        />
                        <div
                          class="euiCheckbox__square"
                        />
                      </div>
                    </div>
                  </th>
                  <th
                    class="euiTableHeaderCell"
                    data-test-subj="tableHeaderCell_name_0"
                    role="columnheader"
                    scope="col"
                  >
                    <span
                      class="euiTableCellContent"
                    >
                      <span
                        class="euiTableCellContent__text"
                        title="Integration Name"
                      >
                        Integration Name
                      </span>
                    </span>
                  </th>
                  <th
                    class="euiTableHeaderCell"
                    data-test-subj="tableHeaderCell_source_1"
                    role="columnheader"
                    scope="col"
                  >
                    <span
                      class="euiTableCellContent"
                    >
                      <span
                        class="euiTableCellContent__text"
                        title="Source"
                      >
                        Source
                      </span>
                    </span>
                  </th>
                  <th
                    class="euiTableHeaderCell"
                    data-test-subj="tableHeaderCell_dateAdded_2"
                    role="columnheader"
                    scope="col"
                  >
                    <span
                      class="euiTableCellContent"
                    >
                      <span
                        class="euiTableCellContent__text"
                        title="Date Added"
                      >
                        Date Added
                      </span>
                    </span>
                  </th>
                </tr>
              </thead>
              <tbody>
                <tr
                  class="euiTableRow euiTableRow-isSelectable"
                >
                  <td
                    class="euiTableRowCellCheckbox"
                  >
                    <div
                      class="euiTableCellContent"
                    >
                      <div
                        class="euiCheckbox euiCheckbox--inList euiCheckbox--noLabel"
                      >
                        <input
                          aria-label="Select this row"
                          class="euiCheckbox__input"
                          data-test-subj="checkboxSelectRow-ad7e6e30-0b99-11ee-b27c-c9863222e9bf"
                          id="_selection_column_ad7e6e30-0b99-11ee-b27c-c9863222e9bf-checkbox"
                          title="Select this row"
                          type="checkbox"
                        />
                        <div
                          class="euiCheckbox__square"
                        />
                      </div>
                    </div>
                  </td>
                  <td
                    class="euiTableRowCell"
                  >
                    <div
                      class="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
                    >
                      Integration Name
                    </div>
                    <div
                      class="euiTableCellContent euiTableCellContent--truncateText euiTableCellContent--overflowingContent"
                    >
                      <a
                        class="euiLink euiLink--primary"
                        data-test-subj="nginxIntegrationLink"
                        href="#/installed/ad7e6e30-0b99-11ee-b27c-c9863222e9bf"
                        rel="noreferrer"
                      >
                        nginx
                      </a>
                    </div>
                  </td>
                  <td
                    class="euiTableRowCell"
                  >
                    <div
                      class="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
                    >
                      Source
                    </div>
                    <div
                      class="euiTableCellContent euiTableCellContent--truncateText euiTableCellContent--overflowingContent"
                    >
                      <a
                        class="euiLink euiLink--primary"
                        data-test-subj="nginxIntegrationDescription"
                        href="#/available/nginx"
                        rel="noreferrer"
                      >
                        nginx
                      </a>
                    </div>
                  </td>
                  <td
                    class="euiTableRowCell"
                  >
                    <div
                      class="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
                    >
                      Date Added
                    </div>
                    <div
                      class="euiTableCellContent euiTableCellContent--truncateText euiTableCellContent--overflowingContent"
                    >
                      <div
                        class="euiText euiText--medium"
                        data-test-subj="nginxIntegrationDescription"
                      >
                        2023-06-15T16:28:36.370Z
                      </div>
                    </div>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
          <div>
            <div
              class="euiSpacer euiSpacer--m"
            />
            <div
              class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow"
            >
              <div
                class="euiFlexItem euiFlexItem--flexGrowZero"
              >
                <div
                  class="euiPopover euiPopover--anchorUpRight"
                >
                  <div
                    class="euiPopover__anchor"
                  >
                    <button
                      class="euiButtonEmpty euiButtonEmpty--text euiButtonEmpty--xSmall"
                      data-test-subj="tablePaginationPopoverButton"
                      type="button"
                    >
                      <span
                        class="euiButtonContent euiButtonContent--iconRight euiButtonEmpty__content"
                      >
                        <svg
                          aria-hidden="true"
                          class="euiIcon euiIcon--small euiIcon--inherit euiButtonContent__icon"
                          focusable="false"
                          height="16"
                          role="img"
                          viewBox="0 0 16 16"
                          width="16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M13.069 5.157 8.384 9.768a.546.546 0 0 1-.768 0L2.93 5.158a.552.552 0 0 0-.771 0 .53.53 0 0 0 0 .759l4.684 4.61c.641.631 1.672.63 2.312 0l4.684-4.61a.53.53 0 0 0 0-.76.552.552 0 0 0-.771 0Z"
                            fill-rule="non-zero"
                          />
                        </svg>
                        <span
                          class="euiButtonEmpty__text"
                        >
                          Rows per page
                          : 
                          10
                        </span>
                      </span>
                    </button>
                  </div>
                </div>
              </div>
              <div
                class="euiFlexItem euiFlexItem--flexGrowZero"
              >
                <nav
                  class="euiPagination"
                >
                  <button
                    aria-label="Previous page"
                    class="euiButtonIcon euiButtonIcon--text euiButtonIcon--empty euiButtonIcon--xSmall"
                    data-test-subj="pagination-button-previous"
                    disabled=""
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="euiIcon euiIcon--medium euiIcon--inherit euiButtonIcon__icon"
                      focusable="false"
                      height="16"
                      role="img"
                      viewBox="0 0 16 16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M10.843 13.069 6.232 8.384a.546.546 0 0 1 0-.768l4.61-4.685a.552.552 0 0 0 0-.771.53.53 0 0 0-.759 0l-4.61 4.684a1.65 1.65 0 0 0 0 2.312l4.61 4.684a.53.53 0 0 0 .76 0 .552.552 0 0 0 0-.771Z"
                        fill-rule="nonzero"
                      />
                    </svg>
                  </button>
                  <ul
                    class="euiPagination__list"
                  >
                    <li
                      class="euiPagination__item"
                    >
                      <button
                        aria-controls="random_html_id"
                        aria-current="true"
                        aria-label="Page 1 of 1"
                        class="euiButtonEmpty euiButtonEmpty--text euiButtonEmpty--small euiButtonEmpty-isDisabled euiPaginationButton euiPaginationButton-isActive euiPaginationButton--hideOnMobile"
                        data-test-subj="pagination-button-0"
                        disabled=""
                        type="button"
                      >
                        <span
                          class="euiButtonContent euiButtonEmpty__content"
                        >
                          <span
                            class="euiButtonEmpty__text"
                          >
                            1
                          </span>
                        </span>
                      </button>
                    </li>
                  </ul>
                  <button
                    aria-label="Next page"
                    class="euiButtonIcon euiButtonIcon--text euiButtonIcon--empty euiButtonIcon--xSmall"
                    data-test-subj="pagination-button-next"
                    disabled=""
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="euiIcon euiIcon--medium euiIcon--inherit euiButtonIcon__icon"
                      focusable="false"
                      height="16"
                      role="img"
                      viewBox="0 0 16 16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="m5.157 13.069 4.611-4.685a.546.546 0 0 0 0-.768L5.158 2.93a.552.552 0 0 1 0-.771.53.53 0 0 1 .759 0l4.61 4.684c.631.641.63 1.672 0 2.312l-4.61 4.684a.53.53 0 0 1-.76 0 .552.552 0 0 1 0-.771Z"
                        fill-rule="nonzero"
                      />
                    </svg>
                  </button>
                </nav>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
